--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,13 +13,13 @@
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">    
         <li>
-          <a href="{{ '/' | prepend: site.baseurl }}">Home</a>
+          <a href="{{ '/' | prepend: site.baseurl }}">回到主页</a>
         </li>
         <li>
-          <a href="{{ '/categories/' | prepend: site.baseurl }}">大类分解</a>
+          <a href="{{ '/categories/' | prepend: site.baseurl }}">大类目录</a>
         </li>
         <li>
-          <a href="{{ '/tag' | prepend: site.baseurl }}">小类内聚</a>
+          <a href="{{ '/tag' | prepend: site.baseurl }}">小类目录</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
