--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">关于<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a rel="nofollow" target="_blank" href="{{site.github}}">Github</a></li>
-			<li><a rel="nofollow" href="{{ '/books' | prepend: site.baseurl }}">看过的书</a></li>
+			<li><a rel="nofollow" href="{{ '/books' | prepend: site.baseurl }}">书籍推荐</a></li>
             <!-- <li><a rel="nofollow" target="_blank" href="{{site.resume_site}}">关于作者</a></li> 
             <li><a rel="nofollow" href="{{ '/books' | prepend: site.baseurl }}">看过的书</a></li>
             <li><a rel="nofollow" href="http://www.hifreud.com/domains/">域名管理</a></li>
